--- a/roles/sway/files/waybar/config
+++ b/roles/sway/files/waybar/config
@@ -5,7 +5,7 @@
     // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/media", "sway/window"],
+    "modules-left": ["sway/workspaces", "sway/mode", "sway/window"],
     "modules-center": [],
     "modules-right": [
         // "mpd",
@@ -21,7 +21,7 @@
         "cpu",
         "temperature", 
         // "backlight", 
-        // "keyboard-state", 
+        // "keyboard-state", // module keyboard-state: Unknown module: keyboard-state
         // "sway/language", 
         "battery",
         "clock"
@@ -42,7 +42,11 @@
         }
     },
     "sway/mode": {
-        "format": "<span style=\"italic\">{}</span>"
+        "format": "{}"
+    },
+    "sway/window": {
+        "format": "{}",
+        "icon": true
     },
     "mpd": {
         "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
@@ -88,16 +92,18 @@
     },
     "cpu": {
         "format": "{usage}% ",
+        "format-alt": "{usage}% {avg_frequency}GHz ",
         "tooltip": false,
         "interval": 2
     },
     "memory": {
         "format": "{}% ",
+        "format-alt": "{used}/{swapUsed}/{total}GB ",
         "interval": 2
     },
     "disk": {
-        "format": "{free} ",
-        "format-alt": "{percentage_free}% ",
+        "format": "{percentage_free}% ",
+        "format-alt": "{used} of {total} ",
         "path": "/"
     },
     "temperature": {
@@ -142,12 +148,12 @@
     },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
+        "format-wifi": "{essid} {signalStrength}% ",
+        "format-ethernet": "{ipaddr}/{cidr} 󰈀",
+        "tooltip-format": "{ifname} via {gwaddr}",
+        "format-linked": "{ifname} (No IP) 󰈀",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-alt": "{ifname}: {ipaddr}/{cidr} 󰩠"
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
