Add version to steam so apt works

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -101,6 +101,7 @@ deb_packages:
     version: "0.23.1"
   - pkg: steam-launcher
     url: https://steamcdn-a.akamaihd.net/client/installer/steam.deb
+    version: "latest"
 
 bins:
   - name: aws-vault
