Update workstyle icons

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -13,14 +13,15 @@
 "home assistant"="󰟐"
 "chrome" = ""
 "github" = ""
-"gitlab" = "󰮠"
+"gitlab" = ""
+"google meet"="󰻒"
 "google" = "󰊭"
 "jira"="󰌃"
 "reddit"="󰑍"
 "youtube"="󰗃"
 "plex"="󰚺"
 "datadog"="󰩄"
-"meet"="󰻒"
+"meet "="󰻒"
 "calendar"="󰃭"
 "hacker news"=""
 "private browsing" = "󰗹"
