Remove mpris from waybar
Was causing crashes

--- a/roles/sway/files/waybar/config
+++ b/roles/sway/files/waybar/config
@@ -10,7 +10,7 @@
     "modules-right": [
         // "mpd",
         "custom/gnma",
-        "mpris",
+        // "mpris",
         "tray",
         "idle_inhibitor", 
         // "custom/media",
