Add more to workstyle config

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -15,6 +15,10 @@
 "github" = ""
 "gitlab" = ""
 "google meet"="󰻒"
+"google docs" = "󰈙"
+"evidenced" = "󱈹"
+"excalidraw" = "󰔙"
+"stack overflow" = "󰓌"
 "google" = "󰊭"
 "jira"="󰌃"
 "reddit"="󰑍"
