--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -85,6 +85,7 @@ apt_packages:
   - subsurface # for dive log
   - ddcutil # for controlling monitors
   - gnome-next-meeting-applet
+  - progress # for checking progress for cp, mv, dd (https://github.com/Xfennec/progress)
 
 deb_packages:
   - pkg: bat
