--- a/host_vars/vulcan-london.yml
+++ b/host_vars/vulcan-london.yml
@@ -1,11 +1,15 @@
 git_email: will@wegift.io
 git_signing_key: 1B48523D91781A7F5CEC929B7CA9BF9F444BF7C8
 
-wallpaper: $HOME/dotfiles/wallpapers/dennis-schweizer-18nR85wWyLY-unsplash
+wallpaper: ~/dotfiles/wallpapers/1440p/richard-horvath-RAZU_R66vUc-unsplash.jpg
 
-screen_left: HDMI-A-0
-screen_right: eDP
-screen_internal: eDP
+screen_left: DP-1
+screen_right: eDP-1
+
+screen_left_w: 2560
+screen_left_h: 1440
+screen_right_w: 1920
+screen_right_h: 1080
 
 has_wireless: yes
 
