Update go version

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -54,6 +54,7 @@
 "file-roller" = "󰀼"
 "sublime_merge" = ""
 "jetbrains-pycharm" = "󰌠"
+"jetbrains-goland" = ""
 "eog" = "󰋩"
 "nomacs" = "󰋩"
 "software" = ""
