Remove next meeting widget from waybar

--- a/roles/sway/files/waybar/config
+++ b/roles/sway/files/waybar/config
@@ -9,7 +9,7 @@
     "modules-center": [],
     "modules-right": [
         // "mpd",
-        "custom/gnma",
+        // "custom/gnma",
         // "mpris",
         "tray",
         "idle_inhibitor", 
