--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -87,6 +87,7 @@ apt_packages:
   - gnome-next-meeting-applet
   - progress # for checking progress for cp, mv, dd (https://github.com/Xfennec/progress)
   - net-tools # view routing table
+  - v4l-utils # video4linux utils
 
 deb_packages:
   - pkg: bat
