--- a/roles/wayland-tweaks/tasks/obsidian.yml
+++ b/roles/wayland-tweaks/tasks/obsidian.yml
@@ -1,8 +1,8 @@
 - name: Modify Obsidian .desktop file to launch in Wayland mode
   lineinfile:
-    path: /usr/share/applications/obsidian.desktop
-    regexp: '^Exec='
-    line: 'Exec=env OBSIDIAN_USE_WAYLAND=1 obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland %U'
+    path: /var/lib/snapd/desktop/applications/obsidian_obsidian.desktop
+    regexp: "^Exec="
+    line: "Exec=env BAMF_DESKTOP_FILE_HINT=/var/lib/snapd/desktop/applications/obsidian_obsidian.desktop /snap/bin/obsidian %U"
     state: present
     backup: yes
   become: yes
