--- a/roles/sway/files/waybar/config
+++ b/roles/sway/files/waybar/config
@@ -92,14 +92,14 @@
         "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
-        "format": "{usage}% ",
-        "format-alt": "{usage}% {avg_frequency}GHz ",
+        "format": "{usage}% 󰻠",
+        "format-alt": "{usage}% {avg_frequency}GHz 󰻠",
         "tooltip": false,
         "interval": 2
     },
     "memory": {
-        "format": "{}% ",
-        "format-alt": "{used}/{swapUsed}/{total}GB ",
+        "format": "{}% ",
+        "format-alt": "{used}/{swapUsed}/{total}GB ",
         "interval": 2
     },
     "disk": {
