--- a/roles/sway/files/waybar/config
+++ b/roles/sway/files/waybar/config
@@ -153,7 +153,7 @@
         "format-ethernet": "󰈀",
         "tooltip-format": "{ifname} via {gwaddr} on {essid}",
         "format-linked": "{ifname} (No IP) 󰈀",
-        "format-disconnected": "NET",
+        "format-disconnected": "NET 󰈀 ",
         "format-alt": "{ifname}: {ipaddr}/{cidr} {essid} 󰩠",
     },
     "pulseaudio": {
