--- a/roles/wayland-tweaks/tasks/slack.yml
+++ b/roles/wayland-tweaks/tasks/slack.yml
@@ -8,7 +8,7 @@
   become: yes
   lineinfile:
     path: /usr/share/applications/slack.desktop
-    regexp: '^Exec='
-    line: 'Exec=env GDK_BACKEND=wayland /usr/bin/slack %U --ozone-platform=wayland --enable-features=UseOzonePlatform,WebRTCPipeWireCapturer %U'
+    regexp: "^Exec="
+    line: "Exec=env GDK_BACKEND=wayland /usr/bin/slack %U --ozone-platform=wayland --enable-features=UseOzonePlatform,WebRTCPipeWireCapturer %U"
     state: present
     backup: yes
