--- a/host_vars/odyssey.yml
+++ b/host_vars/odyssey.yml
@@ -3,9 +3,17 @@ git_signing_key: 1B48523D91781A7F5CEC929B7CA9BF9F444BF7C8
 
 wallpaper: ~/dotfiles/wallpapers/1440p/dennis-schweizer-18nR85wWyLY-unsplash.jpg
 
-screen_left: DP-2
-screen_right: HDMI-A-2
+screen_left: DP-1
+screen_left_scale: 1
 screen_left_w: 2560
 screen_left_h: 1440
+
+screen_right: HDMI-A-1
+screen_right_scale: 1
 screen_right_w: 2560
 screen_right_h: 1440
+
+screen_extra: eDP-1
+screen_extra_w: 2880
+screen_extra_h: 1800
+screen_extra_scale: 1.5
