--- a/host_vars/dux.yml
+++ b/host_vars/dux.yml
@@ -4,8 +4,11 @@ git_signing_key: 4DC1AA6287F8CC4A
 wallpaper: ~/dotfiles/wallpapers/1440p/dennis-schweizer-18nR85wWyLY-unsplash.jpg
 
 screen_left: DP-4
-screen_right: DP-2
+screen_left_scale: 1
 screen_left_w: 2560
 screen_left_h: 1440
+
+screen_right: DP-2
+screen_right_scale: 1
 screen_right_w: 2560
 screen_right_h: 1440
