Update victor config re. screens

--- a/host_vars/victor.yml
+++ b/host_vars/victor.yml
@@ -2,3 +2,8 @@ git_email: will@wjdp.uk
 git_signing_key: 4DC1AA6287F8CC4A
 
 wallpaper: ~/dotfiles/wallpapers/1440p/dennis-schweizer-18nR85wWyLY-unsplash.jpg
+
+screen_left: eDP-1
+screen_left_scale: 1
+screen_left_w: 1920
+screen_left_h: 1080
