--- a/roles/wayland-tweaks/tasks/main.yml
+++ b/roles/wayland-tweaks/tasks/main.yml
@@ -1,11 +1,8 @@
-- name: Tweak Electron apps
-  include_tasks: electron.yml
-
-- name: Tweak Obsidian
-  include_tasks: obsidian.yml
-
-- name: Tweak Slack
-  include_tasks: slack.yml
-
-- name: Tweak VS Code
-  include_tasks: vscode.yml
+- name: Tweak apps to enable wayland mode
+  include_tasks: "{{ item }}"
+  loop:
+    - electron.yml
+    - obsidian.yml
+    - slack.yml
+    - vscode.yml
+    - spotify.yml
