--- a/roles/sway/files/kanshi/config
+++ b/roles/sway/files/kanshi/config
@@ -14,6 +14,11 @@ profile single-head-DP-2 {
     output eDP-1 enable mode 2880x1800 position 2560,240 scale 1.5
 }
 
+profile single-head-DP-3 {
+    output DP-3 enable mode 2560x1440 position 0,0
+    output eDP-1 enable mode 2880x1800 position 2560,240 scale 1.5
+}
+
 profile mobile {
     output eDP-1 enable mode 2880x1800 scale 1.5
 }
