--- a/roles/sway/tasks/sway.yml
+++ b/roles/sway/tasks/sway.yml
@@ -18,6 +18,13 @@
     state: link
     force: yes
 
+- name: Update var config
+  template:
+    src: "vars.j2"
+    dest: "{{ dotfiles_user_home }}/.config/sway/config.d/01-vars"
+    mode: 0664
+
+
 - name: Update output config
   template:
     src: "outputs.j2"
