--- a/host_vars/dux.yml
+++ b/host_vars/dux.yml
@@ -1,8 +1,8 @@
 git_email: will@wjdp.uk
 git_signing_key: 4DC1AA6287F8CC4A
 
-wallpaper: ~/dotfiles/wallpapers/1440p/dennis-schweizer-18nR85wWyLY-unsplash.jpg
-lockpaper: $HOME/dotfiles/wallpapers/dual/firewatch-hike.png
+wallpaper: $HOME/dotfiles/wallpapers/1440p/dennis-schweizer-18nR85wWyLY-unsplash.jpg
+lockpaper: $HOME/dotfiles/wallpapers/2160p/firewatch-no-watch.jpg
 
 screen_left: DP-4
 screen_left_scale: 1
