--- a/host_vars/victor.yml
+++ b/host_vars/victor.yml
@@ -1,7 +1,8 @@
 git_email: will@wjdp.uk
 git_signing_key: 4DC1AA6287F8CC4A
 
-wallpaper: ~/dotfiles/wallpapers/1440p/dennis-schweizer-18nR85wWyLY-unsplash.jpg
+wallpaper: $HOME/dotfiles/wallpapers/1440p/dennis-schweizer-18nR85wWyLY-unsplash.jpg
+lockpaper: $HOME/dotfiles/wallpapers/2160p/firewatch-no-watch.jpg
 
 screen_left: eDP-1
 screen_left_scale: 1
