--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -91,6 +91,7 @@ apt_packages:
   - libwireplumber-0.4-0 # for waybar
   - lxpolkit # PolicyKit authentication agent for GUI applications
   - gh # github cli
+  - zoxide # a better cd, https://github.com/ajeetdsouza/zoxide
 
 deb_packages:
   - pkg: bat
