--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -1,8 +1,8 @@
-- name: Add fish apt repo
-  become: yes
-  apt_repository:
-    repo: "ppa:fish-shell/release-3"
-  register: apt_repo
+# - name: Add fish apt repo
+#   become: yes
+#   apt_repository:
+#     repo: "ppa:fish-shell/release-3"
+#   register: apt_repo
 
 - name: Install fish
   become: yes
