--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -20,11 +20,18 @@
     state: present
     filename: docker
 
-- name: Install docker
+- name: Install docker & docker-compose
   become: yes
   apt:
-    name: docker-ce
+    name: "{{ packages }}"
     state: present
+    update_cache: yes
+  vars:
+    packages:
+      - docker-ce
+      - docker-ce-cli
+      - docker-buildx-plugin
+      - docker-compose-plugin
 
 - name: Add user "{{ user }}" to group docker
   become: yes
@@ -32,33 +39,3 @@
     name: "{{ user }}"
     groups: docker
     append: yes
-
-- name: Ensure plugin directory exists
-  file:
-    path: "{{ docker_cli_plugin_path }}"
-    state: directory
-    mode: 0775
-
-- name: Check current docker-compose version
-  command: "{{ docker_compose_path }} --version"
-  register: docker_compose_current_version
-  check_mode: no
-  changed_when: false
-  failed_when: false
-
-- name: Delete existing docker-compose version if it's different
-  file:
-    path: "{{ docker_compose_path }}"
-    state: absent
-  when: >
-    docker_compose_current_version.stdout is defined
-    and docker_compose_version not in docker_compose_current_version.stdout
-
-- name: Install Docker Compose
-  get_url:
-    url: "{{ docker_compose_url }}"
-    dest: "{{ docker_compose_path }}"
-    mode: 0755
-  when: >
-    docker_compose_current_version.stdout is not defined
-    or docker_compose_version not in docker_compose_current_version.stdout
