--- a/roles/sway/files/kanshi/config
+++ b/roles/sway/files/kanshi/config
@@ -4,6 +4,11 @@ profile odyssey-home {
     output eDP-1 enable mode 2880x1800 position 5120,411 scale 1.75
 }
 
+profile odyssey-sofia {
+    output "Philips Consumer Electronics Company PHL27E1N5300 UK02335032672" enable mode 1920x1080 position 0,0
+    output eDP-1 enable mode 2880x1800 position 1920,51 scale 1.75
+}
+
 profile odyssey-single-head-DP-1 {
     output DP-1 enable mode 2560x1440 position 0,0
     output eDP-1 enable mode 2880x1800 position 2560,240 scale 1.75
