Fix waybar temp on victor
Added support for hwmon-path rather than te combo of
hwmon-path-abs/input-filename. Perhaps a newer method added in new
waybar version.

--- a/host_vars/victor.yml
+++ b/host_vars/victor.yml
@@ -8,3 +8,5 @@ screen_left: eDP-1
 screen_left_scale: 1
 screen_left_w: 1920
 screen_left_h: 1080
+
+temp_hwmon_path: /sys/devices/platform/thinkpad_hwmon/hwmon/hwmon4/temp1_input
