--- a/local.yml
+++ b/local.yml
@@ -7,6 +7,7 @@
     - { role: bin, tags: ["bin"] }
     - { role: linux, tags: ["linux"] }
     - { role: python, tags: ["python"] }
+    - { role: pipx, tags: ["pipx"] }
     - { role: dotfiles, tags: ["dotfiles"] }
     - { role: autofs, tags: ["autofs"] }
     - { role: fish, tags: ["fish"] }
