--- a/roles/pipx/tasks/main.yml
+++ b/roles/pipx/tasks/main.yml
@@ -7,5 +7,5 @@
   loop: "{{ pipx_packages }}"
   community.general.pipx:
     name: "{{ item.name }}"
-    state: "{{ item.state if item.state is defined else 'present' }}"
+    state: "{{ item.state if item.state is defined else 'latest' }}"
     python: "{{ item.python if item.python is defined else 'python3' }}"
