--- a/host_vars/victor.yml
+++ b/host_vars/victor.yml
@@ -10,3 +10,5 @@ screen_left_w: 1920
 screen_left_h: 1080
 
 temp_hwmon_path: /sys/devices/platform/thinkpad_hwmon/hwmon/hwmon4/temp1_input
+
+sshd: true
