--- a/local.yml
+++ b/local.yml
@@ -6,6 +6,7 @@
     - { role: apt, tags: ["apt"] }
     - { role: bin, tags: ["bin"] }
     - { role: linux, tags: ["linux"] }
+    - { role: ssh, tags: ["ssh"] }
     - { role: python, tags: ["python"] }
     - { role: pipx, tags: ["pipx"] }
     - { role: dotfiles, tags: ["dotfiles"] }
