Add an icon for webstorm

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -54,6 +54,7 @@
 "sublime_merge" = ""
 "jetbrains-pycharm" = "󰌠"
 "jetbrains-goland" = ""
+"jetbrains-webstorm" = ""
 "eog" = "󰋩"
 "nomacs" = "󰋩"
 "software" = ""
