--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -1,33 +1,33 @@
-# - name: Install deadsnakes repo
-#   become: yes
-#   apt_repository:
-#     repo: "ppa:deadsnakes/ppa"
-#   register: apt_repo
+- name: Install deadsnakes repo
+  become: yes
+  apt_repository:
+    repo: "ppa:deadsnakes/ppa"
+  register: apt_repo
 
-# - name: Install python
-#   become: yes
-#   apt:
-#     name:
-#       - python3
-#       - python3-pip
-#       - python3-dev
-#       - python3.8
-#       - python3.8-dev
-#       - python3.8-distutils
-#       - python3.9
-#       - python3.9-dev
-#       - python3.9-distutils
-#       - python3.10
-#       - python3.10-dev
-#       - python3.10-distutils
-#       - python-is-python3
-#     state: present
-
-# - name: Ensure user pip is up to date
-#   pip:
-#     name: pip
-#     state: latest
-#     extra_args: --user
+- name: Install python
+  become: yes
+  apt:
+    name:
+      - python3
+      - python3-pip
+      - python3-dev
+      - python3.8
+      - python3.8-dev
+      - python3.8-distutils
+      - python3.9
+      - python3.9-dev
+      - python3.9-distutils
+      - python3.10
+      - python3.10-dev
+      - python3.10-distutils
+      - python3.11
+      - python3.11-dev
+      - python3.11-distutils
+      - python3.12
+      - python3.12-dev
+      # - python3.12-distutils # Does not exist
+      - python-is-python3
+    state: present
 
 - name: Check if poetry is installed
   stat:
@@ -42,9 +42,3 @@
   shell: |
     set -o pipefail &&
     curl -sSL https://install.python-poetry.org | python -
-
-# - name: Install user python packages
-#   pip:
-#     name: "{{ pip_user_packages }}"
-#     state: present
-#     extra_args: --user
