--- a/local.yml
+++ b/local.yml
@@ -7,7 +7,7 @@
     - { role: bin, tags: ["bin"] }
     - { role: linux, tags: ["linux"] }
     - { role: ssh, tags: ["ssh"] }
-    - { role: python, tags: ["python"], hosts: ['abc'] }
+    - { role: python, tags: ["python"] }
     - { role: pipx, tags: ["pipx"] }
     - { role: dotfiles, tags: ["dotfiles"] }
     - { role: fish, tags: ["fish"] }
@@ -15,7 +15,6 @@
     - { role: gnome, tags: ["gnome"] }
     - { role: sway, tags: ["sway"] }
     - { role: git, tags: ["git"] }
-    # - { role: node, tags: ["node"] }
     - { role: vim, tags: ["vim"] }
     - { role: sublime, tags: ["sublime"] }
     - { role: google-chrome, tags: ["google-chrome"] }
