--- a/roles/sway/tasks/apt.yml
+++ b/roles/sway/tasks/apt.yml
@@ -1,9 +1,9 @@
-# - name: Add repos
-#   loop: "{{ sway_apt_repos }}"
-#   become: yes
-#   apt_repository:
-#     repo: "{{ item }}"
-#     state: present
+- name: Add repos
+  loop: "{{ sway_apt_repos }}"
+  become: yes
+  apt_repository:
+    repo: "{{ item }}"
+    state: present
 
 - name: Install apt packages
   become: yes
