--- a/roles/sway/vars/main.yml
+++ b/roles/sway/vars/main.yml
@@ -1,12 +1,11 @@
 sway_apt_repos:
   - ppa:agornostal/ulauncher
-#  - ppa:nschloe/waybar
 
 sway_apt_packages:
   - sway
   - swaylock
   - swayidle
-  # - ulauncher
+  - ulauncher
   - fd-find
   - wl-clipboard
   - suckless-tools
