--- a/roles/subsurface/tasks/main.yml
+++ b/roles/subsurface/tasks/main.yml
@@ -11,16 +11,10 @@
     state: present
 
 - name: Get credentials for subsurface
-  shell: pass subsurface
-  register: subsurface_creds
-  changed_when: False
-
-- name: Split credentials into variables
   set_fact:
-    subsurface_email: "{{ subsurface_creds.stdout_lines[1].split(': ')[1] }}"
-    subsurface_password: "{{ subsurface_creds.stdout_lines[0] }}"
+    subsurface_email: "{{ lookup('community.general.passwordstore', 'subsurface', subkey='login') }}"
+    subsurface_password: "{{ lookup('community.general.passwordstore', 'subsurface') }}"
 
-# ~/.config/Subsurface/Subsurface.conf
 - name: Check if subsurface is already configured
   stat:
     path: "~/.config/Subsurface/Subsurface.conf"
