--- a/host_vars/odyssey.yml
+++ b/host_vars/odyssey.yml
@@ -2,7 +2,8 @@ git_email: will@wegift.io
 git_signing_key: 1B48523D91781A7F5CEC929B7CA9BF9F444BF7C8
 
 wallpaper: $HOME/dotfiles/wallpapers/1440p/richard-horvath-RAZU_R66vUc-unsplash.jpg
-lockpaper: $HOME/dotfiles/wallpapers/dual/firewatch-hike.jpg
+lockpaper_path: $HOME/dotfiles/wallpapers/tile/square-tubes-green.png
+lockpaper_scaling: tile
 
 screen_left: DP-1
 screen_left_scale: 1
