Re-enable rust role
Installs cargo_user_packages

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -238,6 +238,7 @@ pipx_packages:
   - name: shell-gpt
 
 cargo_user_packages:
+  - cargo-update # run cargo-install-update install-update -a to update all installed packages
   - just
   - swayr
 
